--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-bootstrap": "^0.30.6",
     "react-bootstrap-slider": "^1.1.3",
     "react-dom": "^15.3.2",
-    "react-router": "^3.0.0",
+    "react-router": "^4.0.0-alpha.6",
     "react-router-bootstrap": "^0.23.1"
   }
 }
